{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 228,
  "lineage": "db495dae-4c59-ac35-a31c-49a64b2b7afd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tasknest_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ffe3c48a9991133",
            "arn": "arn:aws:ec2:us-east-1:412381741165:instance/i-04579bb95d63e880a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "taskknest-ec2-profile",
            "id": "i-04579bb95d63e880a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "n-varginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c0658a6f5d0b0cd",
            "private_dns": "ip-10-0-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-13-222-211-102.compute-1.amazonaws.com",
            "public_ip": "13.222.211.102",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0efc856d59ef71588",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0576aa2a728660297",
            "tags": {
              "Name": "tasknest-ec2"
            },
            "tags_all": {
              "Name": "tasknest-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007fb83f785939a43"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.tasknest_rds",
            "aws_db_subnet_group.db_subnet",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_s3_bucket.tasknest_bucket",
            "aws_security_group.tasknest_sg",
            "aws_subnet.tasknest_subnet_1",
            "aws_subnet.tasknest_subnet_2",
            "aws_vpc.tasknest_vpc",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tasknest_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412381741165:internet-gateway/igw-01d5e51f02b6a61b9",
            "id": "igw-01d5e51f02b6a61b9",
            "owner_id": "412381741165",
            "region": "us-east-1",
            "tags": {
              "Name": "tasknest-igw"
            },
            "tags_all": {
              "Name": "tasknest-igw"
            },
            "vpc_id": "vpc-02a7cd3e5bd819bab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tasknest_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412381741165:route-table/rtb-04e5140d602fc2389",
            "id": "rtb-04e5140d602fc2389",
            "owner_id": "412381741165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d5e51f02b6a61b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tasknest-rt"
            },
            "tags_all": {
              "Name": "tasknest-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a7cd3e5bd819bab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tasknest_igw",
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tasknest_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734f63d4d5e51033",
            "region": "us-east-1",
            "route_table_id": "rtb-04e5140d602fc2389",
            "subnet_id": "subnet-0576aa2a728660297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tasknest_igw",
            "aws_route_table.tasknest_rt",
            "aws_subnet.tasknest_subnet_1",
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tasknest_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c19b86a9e216d6d",
            "region": "us-east-1",
            "route_table_id": "rtb-04e5140d602fc2389",
            "subnet_id": "subnet-0b646feb7275cf503"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tasknest_igw",
            "aws_route_table.tasknest_rt",
            "aws_subnet.tasknest_subnet_2",
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tasknest_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412381741165:security-group/sg-007fb83f785939a43",
            "description": "Allow SSH and Flask port \u0026 Allow MySQL inbound traffic from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007fb83f785939a43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tasknest-sg",
            "name_prefix": "",
            "owner_id": "412381741165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tasknest-sg"
            },
            "tags_all": {
              "Name": "tasknest-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a7cd3e5bd819bab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381741165",
            "id": "sg-007fb83f785939a43",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tasknest_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412381741165:subnet/subnet-0576aa2a728660297",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0576aa2a728660297",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412381741165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tasknest-subnet-1"
            },
            "tags_all": {
              "Name": "tasknest-subnet-1"
            },
            "vpc_id": "vpc-02a7cd3e5bd819bab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381741165",
            "id": "subnet-0576aa2a728660297",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tasknest_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412381741165:subnet/subnet-0b646feb7275cf503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b646feb7275cf503",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412381741165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tasknest-subnet-2"
            },
            "tags_all": {
              "Name": "tasknest-subnet-2"
            },
            "vpc_id": "vpc-02a7cd3e5bd819bab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381741165",
            "id": "subnet-0b646feb7275cf503",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tasknest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tasknest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:412381741165:vpc/vpc-02a7cd3e5bd819bab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7803ca9e1cb9264",
            "default_route_table_id": "rtb-0fe6d9485491b5fd4",
            "default_security_group_id": "sg-0280bf83dd8b90563",
            "dhcp_options_id": "dopt-097180c27721afd1f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a7cd3e5bd819bab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe6d9485491b5fd4",
            "owner_id": "412381741165",
            "region": "us-east-1",
            "tags": {
              "Name": "tasknest-vpc"
            },
            "tags_all": {
              "Name": "tasknest-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}